--- a/index.html
+++ b/index.html
@@ -3,32 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio</title>
+    <title>Sobre Mim</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>[Seu Nome]</h1>
-        <nav>
-            <a href="#sobre">Sobre Mim</a>
-            <a href="#projetos">Projetos</a>
-            <a href="#contato">Contato</a>
-        </nav>
-    </header>
-    <section id="sobre">
-        <h2>Sobre Mim</h2>
-        <p>Olá! Eu sou [Seu Nome], um desenvolvedor apaixonado por tecnologia.</p>
+    <!-- Menu de navegação -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Sobre Mim</a></li>
+            <li><a href="formacao.html">Formação</a></li>
+            <li><a href="portfolio.html">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
+
+    <!-- Seção Sobre Mim -->
+    <section>
+        <h1>Olá, eu sou [Seu Nome]</h1>
+        <p>Sou um desenvolvedor apaixonado por tecnologia e design. Gosto de criar soluções criativas e funcionais para problemas do dia a dia.</p>
     </section>
-    <section id="projetos">
-        <h2>Projetos</h2>
-        <p>Aqui estão alguns dos meus projetos...</p>
-    </section>
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Email: seuemail@exemplo.com</p>
-    </section>
-    <script src="script.js"></script>
 </body>
 </html>
